# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("ganesh_app") {
  sources = [
    "ganesh_app.cc",
    "ganesh_view.cc",
    "ganesh_view.h",
    "texture_uploader.cc",
    "texture_uploader.h",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/environment:chromium",
    "//mojo/gpu",
    "//mojo/public/c/gpu",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/interfaces/application",
    "//mojo/services/geometry/public/cpp",
    "//mojo/services/geometry/public/interfaces",
    "//mojo/services/surfaces/public/cpp",
    "//mojo/services/surfaces/public/interfaces",
    "//mojo/services/surfaces/public/interfaces:surface_id",
    "//mojo/services/view_manager/public/cpp",
    "//mojo/skia",
    "//skia",
  ]
}
