# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("keyboard_client") {
  sources = [
    "keyboard_client.cc",
  ]

  deps = [
    "//base",
    "//mojo/public/cpp/application:standalone",
    "//mojo/services/keyboard/public/interfaces",
  ]
}
