# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("pdf_viewer") {
  sources = [
    "pdf_viewer.cc",
  ]

  deps = [
    "//examples/bitmap_uploader",
    "//mojo/application",
    "//mojo/application:content_handler",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/input_events/public/interfaces",
    "//mojo/services/network/public/interfaces",
    "//mojo/services/public/interfaces/content_handler",
    "//mojo/services/view_manager/public/cpp",
    "//third_party/pdfium",
  ]
}
