# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

group("versioning") {
  deps = [
    ":hr_system_client",
    ":hr_system_server",
  ]
}

mojo_native_application("hr_system_client") {
  output_name = "versioning_hr_system_client"

  deps = [
    ":hr_system_client_bindings",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment:environment",
    "//mojo/public/cpp/utility",
  ]

  sources = [
    "hr_system_client.cc",
  ]
}

mojo_native_application("hr_system_server") {
  output_name = "versioning_hr_system_server"

  deps = [
    ":hr_system_server_bindings",
    "//mojo/common",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
  ]

  sources = [
    "hr_system_server.cc",
  ]
}

mojom("hr_system_client_bindings") {
  sources = [
    "hr_system_client.mojom",
  ]
}

mojom("hr_system_server_bindings") {
  sources = [
    "hr_system_server.mojom",
  ]
}
